--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "html-to-image": "^1.3.20",
     "node-sass": "4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-color-gradient-picker": "^0.1.2",
+    "react-component-export-image": "^1.0.5",
     "react-dom": "^17.0.1",
     "react-linear-gradient-picker": "^1.1.4",
     "react-redux": "^7.2.2",
