--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dom-to-image": "^2.6.0",
+    "downloadjs": "^1.4.7",
     "html-to-image": "^1.3.20",
+    "html2canvas": "^1.0.0-rc.7",
     "node-sass": "4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
