--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "dom-to-image": "^2.6.0",
-    "downloadjs": "^1.4.7",
-    "html-to-image": "^1.3.20",
-    "html2canvas": "^1.0.0-rc.7",
     "node-sass": "4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
@@ -18,10 +14,7 @@
     "react-component-export-image": "^1.0.5",
     "react-dom": "^17.0.1",
     "react-linear-gradient-picker": "^1.1.4",
-    "react-redux": "^7.2.2",
-    "react-scripts": "4.0.1",
-    "redux": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "set PORT=3999 && react-scripts start",
